--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Layer for web communication with registry",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e js,json index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/x0r3k/SOA_Web_Facade/issues"
   },
-  "homepage": "https://github.com/x0r3k/SOA_Web_Facade#readme"
+  "homepage": "https://github.com/x0r3k/SOA_Web_Facade#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "nodemon": "^2.0.6"
+  }
 }
