--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/x0r3k/SOA_Web_Facade#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.8.0",
     "http-errors": "^1.8.0",
     "nodemon": "^2.0.6"
   }
